ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bms.vijay.com   # (You can replace this with your actual domain or skip host)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bms-service   # This must match your Service name
                port:
                  number: 80
